drkns 22.08.2018 23:59:59 +0100 - build 5261

1. Откат отката (4858) и возвращение к 4853 и shared_mutex. Возможно, поиску в архивах станет лучше. Или нет.

zg 22.08.2018 17:50:28 +0300 - build 5260

1. откат 5256.

drkns 22.08.2018 02:28:40 +0100 - build 5259

1. В CRT VS 2017 15.8 напихали очередной гадости, vc_crt_fix* обновлены для поддержки старых ОС.

MZK 19.08.2018 16:14:41 -0700

1. Перевел на английский страничку подсказки @Codepages.NoAutoDetectCP.

drkns 19.08.2018 14:58:35 +0100 - build 5258

1. Уточнения в обработке ".." в панелях плагинов.
   - OPIF_ADDDOTS добавляет ".." всегда.
   - если OPIF_ADDDOTS не установлен, то надкаталогом считается первый ".." в списке, независимо от наличия FILE_ATTRIBUTE_DIRECTORY.
   - Отличаем виртуальный ".." от настоящей папки, если возможно.

drkns 19.08.2018 08:53:24 +0100 - build 5257

1. VS 2017 15.8.1.

zg 15.08.2018 00:00:47 +0300 - build 5256

1. все вызовы плагинов защищены глобальной критической секцией.

drkns 09.08.2018 21:06:04 +0100 - build 5255

1. Оказывается, SQLite, начиная с 3.21, не использует rand_s() и костыль для поддержки Win2k, добавленный в 4710, больше не нужен.

2. Пара мелочей.

drkns 05.08.2018 14:05:25 +0100 - build 5254

1. Продолжение 5252.

drkns 03.08.2018 12:13:31 +0100 - build 5253

1. Продолжение 5249.

drkns 03.08.2018 00:28:15 +0100 - build 5252

1. Уточнение 5248.

drkns 02.08.2018 19:06:57 +0100 - build 5251

1. Уточнение 5250.2.

drkns 02.08.2018 18:08:20 +0100 - build 5250

1. Рефакторинг.

2. Несколько мелких оптимизаций в работе с sqlite.

zg 02.08.2018 18:54:18 +0300 - build 5249

1. уточнение 5242.1, если панель закрывается внутри GetFilesW и DeleteFilesW.

drkns 01.08.2018 15:04:37 +0100 - build 5248

1. Рефакторинг.

drkns 25.07.2018 00:21:37 +0100 - build 5247

1. Уточнение 5240.

2. Рефакторинг.

drkns 23.07.2018 23:54:41 +0100 - build 5246

1. Продолжение 5211.1. Должны снова работать ассоциации типа !.! в архивах.

zg 24.07.2018 00:57:09 +0300 - build 5245
