@@ -1,3 +1,7 @@
+zg 01.09.2018 18:59:52 +0300 - build 5262
+
+1. проверка корректности координат в DialogInit.
+
 drkns 22.08.2018 23:59:59 +0100 - build 5261
 
 1. Откат отката (4858) и возвращение к 4853 и shared_mutex. Возможно, поиску в архивах станет лучше. Или нет.
